# frieren

./: .gitignore  LICENSE  README.md  open-source.fern
backend/: go.mod  go.sum  main.go
backend/controllers/: repos-controller.go  repos_controller.go
backend/db/: base_db.go  db.go  repos_db.go
backend/routes/: repos.go  root.go
backend/types/: repo.go
backend/utils/: construct_filters.go  get_current_time.go
frieren-cli/: frieren-cli.py  go.mod  go.sum  main.go  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
frontend/components/: cards.js  nav.js  searchbar.js
frontend/components/cards/: card.js  cards.js
frontend/constants/: theme.ts
frontend/context/: context.js  searchbar.js
frontend/utils/: fetchApi.js
server-update-tool/: Cargo.toml
server-update-tool/src/: db.rs  fern.rs  github.rs  main.rs
update_scripts/: Cargo.toml
update_scripts/src/: main.rs
