[package]
name = "server-update-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.7"
bson = { version = "2.7.0", features=["chrono-0_4"]}
tokio = "1.32"
chrono = "0.4"
serde = "1"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.107"